--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Lato", sans-serif;
   margin: 0;
   color: #4e6766; }
 
@@ -55,24 +56,37 @@ form label {
 nav {
   background-color: #713afc !important; }
 
+.username-display {
+  font-size: 25px !important; }
+
 .logout {
   background-image: linear-gradient(to right, #2edbaf, #57e2e5);
   line-height: 0;
   height: 40px;
-  margin-right: 50px;
+  margin-right: 20px;
   border-radius: 5px; }
+
+.search-btn {
+  background-image: linear-gradient(to right, #2edbaf, #57e2e5);
+  line-height: 0;
+  height: 40px;
+  border-radius: 5px;
+  padding: 0 !important;
+  width: 20%; }
 
 nav a {
   background-color: transparent !important;
   color: #fff !important;
-  padding: 0 20px !important; }
+  padding: 0 20px !important;
+  font-size: 20px !important; }
 
 .nav-wrapper {
   background-color: transparent !important;
   color: #fff;
   box-shadow: none !important;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  padding: 0 10px; }
 
 #nav-mobile li a {
   color: #fff !important; }
@@ -101,17 +115,84 @@ nav a {
 .search input {
   margin-right: 30px !important; }
 
-.search button {
-  margin-right: 0 !important;
-  padding: 0 !important;
-  width: 10%; }
-
 .dashboard {
   min-height: 100vh;
   padding: 20px; }
 
 .dashboard h2 {
   margin: 0;
-  font-size: 30px; }
+  font-size: 30px;
+  color: #2edbaf; }
+
+.error {
+  background-color: rgba(255, 0, 0, 0.37);
+  width: 100%;
+  padding: 10px 0px;
+  text-align: center;
+  border-radius: 5px; }
+
+.success {
+  background-color: #2edbb096;
+  width: 100%;
+  padding: 10px 0px;
+  text-align: center;
+  border-radius: 5px; }
+
+.bookmark-content {
+  color: #4e6766; }
+
+.dashboard {
+  display: grid;
+  grid-template-columns: 0.9fr 4fr;
+  padding: 0; }
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-right: 2px solid #8888883b;
+  margin: 20px 0; }
+
+.user-content {
+  padding: 30px 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-gap: 30px;
+  grid-auto-rows: 330px;
+  justify-content: center !important; }
+
+.user-btn {
+  background-image: linear-gradient(to right, #2edbaf, #57e2e5);
+  width: 100%;
+  margin: 20px 0;
+  border-radius: 5px; }
+
+.add-btn-container {
+  border-bottom: 2px solid #8888883b; }
+
+.create-group {
+  margin-bottom: 30px; }
+
+.add-bookmark {
+  margin-top: 30px; }
+
+.card-content .card-title {
+  color: #4e6766 !important;
+  font-size: 25px;
+  font-weight: bold; }
+
+.card {
+  width: 300px !important;
+  color: #4e6766 !important;
+  border-radius: 0 0 5px 5px !important; }
+
+.card a {
+  color: #57e2e5; }
+
+.card-image {
+  background-color: #343b3a94;
+  height: 200px;
+  border-radius: 5px 5px 0 0 !important; }
 
 /*# sourceMappingURL=style.css.map */
