--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -50,11 +50,13 @@ a {
 input.validate.valid {
   border-bottom: 1px solid #57e3e5bb !important;
   box-shadow: 0 1px 0 0 #57e3e5bb !important;
+  color: #4e6766 !important;
 }
 
 input.validate {
   border-bottom: 1px solid #2de3b286 !important;
   box-shadow: 0 1px 0 0 #2de3b286 !important;
+  color: #4e6766 !important;
 }
 form label {
   color: #4e6766 !important;
@@ -204,6 +206,7 @@ nav a {
 }
 .user-btn {
   background-image: linear-gradient(to right, #2edbaf, #57e2e5);
+  // background-image: linear-gradient(to right, #a682ff, #713afc) !important;
   width: 100%;
   margin: 20px 0;
   border-radius: 5px;
@@ -237,10 +240,40 @@ nav a {
   // margin: 20px 33px;
 }
 .card a {
-  color: #57e2e5;
+  color: #713afc !important;
 }
 .card-image {
   background-color: #343b3a94;
   height: 200px;
   border-radius: 5px 5px 0 0 !important;
+}
+
+.bookmark-options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-delete-buttons {
+  display: flex;
+}
+
+.edit-delete-buttons button {
+  margin-left: 10px;
+}
+
+.edit-delete-buttons button {
+  background-image: linear-gradient(to right, #57e2e5, #57e2e5);
+}
+
+.edit-delete-buttons .red {
+  background-image: linear-gradient(to right, #a682ff, #a682ff) !important;
+}
+
+.bookmark-content a {
+  color: #fff !important;
+}
+
+.bookmark-content ul li a {
+  color: #2edbaf !important;
 }
