--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -14,7 +14,7 @@
     <h2>Link Saver</h2>
     <div class="add-btn-container">
       <a class="waves-effect waves-light btn modal-trigger add-bookmark user-btn" href="#modal2">Add Bookmark</a>
-      <a class="waves-effect waves-light btn modal-trigger create-group user-btn" href="#modal2">Add Folder</a>
+      <a class="waves-effect waves-light btn modal-trigger create-group user-btn" href="#modal3">Add Folder</a>
     </div>
     <h5>Folders</h5>
     <div id="modal2" class="modal">
@@ -23,6 +23,15 @@
       </div>
       <div class="modal-footer">
         <a href="#modal2" class="modal-close waves-effect waves-green btn-flat">close</a>
+      </div>
+    </div>
+    <div id="modal3" class="modal">
+      <div class="modal-content">
+        {{!-- {{> bookmark}} --}}
+        test
+      </div>
+      <div class="modal-footer">
+        <a href="#modal3" class="modal-close waves-effect waves-green btn-flat">close</a>
       </div>
     </div>
   </div>
