--- a/views/partials/bookmark.hbs
+++ b/views/partials/bookmark.hbs
@@ -28,7 +28,7 @@
           <div class="switch">
             <label>
               public
-              <input id="isPublic" type="checkbox" name="is_public" value="false">
+              <input type="checkbox" name="is_public" value="false">
               <span class="lever"></span>
               private
             </label>
