--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,16 +8,31 @@
   <title>Link Savor</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a561988c34.js"></script>
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
 <body>
-  {{{body}}}
+  <div class="all-content">
+    {{{body}}}
+  </div>
+
+  <footer>
+    <li>Mitch Malinin Productions 2019 &copy;</li>
+    <ul>
+      <li><a target="_blank" href="https://github.com/mitchmalinin"><i class="fa-2x fab fa-github-square"></i></a></li>
+      <li><a target="_blank" href="https://linkedin.com/in/mitchmalinin/"><i class="fa-2x fab fa-linkedin"></i></a></li>
+      <li><a target="_blank" href="https://twitter.com/mitchmalinin"><i class="fa-2x fab fa-twitter-square"></i></a>
+      </li>
+    </ul>
+
+  </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="/javascripts/script.js"></script>
+
 </body>
 
 </html>
