--- a/views/partials/bookmarkCard.hbs
+++ b/views/partials/bookmarkCard.hbs
@@ -40,13 +40,11 @@
                     <label>Description:</label>
                   </div>
                   <div class="input-field col s12 dropdown-edit">
-                    <a class='dropdown-trigger btn' href='#' data-target='{{this._id}}'>Folder</a>
-                    <!-- Dropdown Structure -->
-                    <ul id='{{this._id}}' class='dropdown-content'>
-                      <li><a href="#!">one</a></li>
-                      <li><a href="#!">two</a></li>
-                      <li><a href="#!">three</a></li>
-                    </ul>
+                    <select name="folder">
+                      {{#each folder}}
+                      <option value="{{this._id}}">{{this.name}}</option>
+                      {{/each}}
+                    </select>
                   </div>
                   <div class="input-field col s12">
                     <div class="switch">
