--- a/views/partials/bookmark.hbs
+++ b/views/partials/bookmark.hbs
@@ -17,7 +17,7 @@
         </div>
         <div class="input-field col s12">
           <select name="folder">
-            {{#each folder}}
+            {{#each folders}}
             <option value="{{this._id}}">{{this.name}}</option>
             {{/each}}
           </select>
