--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -11,10 +11,16 @@ a {
   color: #00b7ff;
 }
 
-.home-page-content {
+.all-homepage-content {
   display: flex;
   justify-content: space-evenly;
   padding: 20px;
+}
+
+.greendiv {
+  background-color: #2edbaf;
+  height: 50vh;
+  position: absolute;
 }
 
 .login {
@@ -302,7 +308,7 @@ footer {
   align-items: center;
   color: #4e6766;
   list-style-type: none;
-  font-weight: bold;
+  // font-weight: bold;
   padding: 0 20px;
   // background-image: linear-gradient(to right, #713afc, #713afc) !important;
   // background-color: #713afc0a;
@@ -327,4 +333,16 @@ footer ul li a:hover {
 }
 .all-content {
   min-height: 100vh;
+}
+
+.folder-name {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.total-user-content {
+  display: flex;
+  flex-direction: column;
 }
