--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -33,7 +33,8 @@ a {
 
 .login-signup-buttons {
   width: 25%;
-  box-shadow: 1px 1px 8px #888888;
+  // box-shadow: 1px 1px 8px #888888;
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.14);
   padding: 20px;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -401,4 +402,8 @@ h4 {
   grid-auto-rows: 330px;
   // align-items: center;
   justify-content: center !important;
+}
+
+.user-card h5 {
+  padding: 0 50px;
 }
