--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,7 @@
   <div class="all-homepage-content">
     <div class="welcome">
       <h1>Welcome to Link Saver</h1>
+      <p>A clean, simple, and beautiful way to manage your bookmarks.</p>
       <img src="" alt="">
     </div>
     <div class="login-signup-buttons">
