--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -4,8 +4,8 @@
       <li><a href="/user/homepage">Home</a></li>
       <li><a href="/news-feed/all">News Feed</a></li>
     </ul>
-    <form class="search" action="/user/save-bookmark" method="POST">
-      Search: <input type="text" name="fname">
+    <form class="search" action="/user/search" method="POST">
+      Search: <input type="text" name="search">
       <button class="waves-effect waves-light btn-large search-btn"> search</button>
     </form>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
