--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -3,8 +3,8 @@
 
 {{!-- all the user content on main display --}}
 <div class="total-user-content">
-  <div class="user-card">
-    <div class="user-card-all">
+  <div class="one-user-card">
+    <div class="user-card-single">
       <div class="card-img" style="background-image: url('/images/me.png')">
       </div>
       <div class="user-card-info">
