--- a/views/partials/folderCard.hbs
+++ b/views/partials/folderCard.hbs
@@ -1,81 +1,67 @@
-<div class="card">
-  <a href="/user/folder/{{this._id}}">
-    <div class="card-image waves-effect waves-block waves-light">
-
-    </div>
-  </a>
-  <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">{{this.name}}</span>
-    <div class="bookmark-options">
-      <div class="edit-delete-buttons">
-        <a href="#/user/{{this._id}}" class="modal-trigger">
-          <button class="btn-floating btn-small waves-effect waves-light teal lighten">
-            <i class="material-icons delete">edit</i>
-          </button>
-        </a>
-        <form action="/user/{{this._id}}/delete" method="POST">
-          <button class="btn-floating btn-small waves-effect waves-light red darken-1">
-            <i class="material-icons delete">close</i>
-          </button>
-        </form>
-      </div>
-      {{!-- start of edit modal --}}
-      <div id="/user/{{this._id}}" class="modal">
-        <div class="modal-content">
-          <div class="bookmark-content">
-            <h2>Update folder</h2>
-            <div class="row">
-              <form action="/user/{{bookmark._id}}/update" class="col s12" method="POST">
-                <div class="row">
-                  <div class="input-field col s12">
-                    <input name="url" type="text" class="validate" value="{{bookmark.url}}">
-                    <label>Url:</label>
-                  </div>
-                  <div class=" input-field col s12">
-                    <input name="title" type="text" class="validate" value="{{bookmark.title}}">
-                    <label>Title:</label>
-                  </div>
-                  <div class="input-field col s12">
-                    <input name="description" type="text" class="validate" value="{{bookmark.description}}">
-                    <label>Description:</label>
-                  </div>
-                  <div class="input-field col s12 dropdown-edit">
-                    <select name="folder">
-                      {{#each folders}}
-                      <option value="{{this._id}}">{{this.name}}</option>
-                      {{/each}}
-                    </select>
-                  </div>
-                  <div class="input-field col s12">
-                    <div class="switch">
-                      {{#if bookmark.is_public}}
-                      <label>
-                        public
-                        <input id="isPublic" type="checkbox" name="is_public" value="false">
-                        <span class="lever"></span>
-                        private
-                      </label>
-                      {{else}}
-                      <label>
-                        public
-                        <input id="isPublic" type="checkbox" name="is_public" value="false" checked="true">
-                        <span class="lever"></span>
-                        private
-                      </label>
-                      {{/if}}
-                    </div>
+<div class="row">
+  <div class="col s12 m6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">{{this.name}}
+          <div class="this-options">
+            {{!-- start of edit modal --}}
+            <div id="/folder/{{this._id}}" class="modal">
+              <div class="modal-content">
+                <div class="this-content">
+                  <h2>Update this</h2>
+                  <div class="row">
+                    <form action="/user/{{this._id}}/update" class="col s12" method="POST">
+                      <div class="row">
+                        <div class=" input-field col s12">
+                          <input name="title" type="text" class="validate" value="{{this.name}}">
+                          <label>Name:</label>
+                        </div>
+                        <div class="input-field col s12">
+                          <div class="switch">
+                            {{#if this.is_public}}
+                            <label>
+                              public
+                              <input id="isPublic" type="checkbox" name="is_public" value="false">
+                              <span class="lever"></span>
+                              private
+                            </label>
+                            {{else}}
+                            <label>
+                              public
+                              <input id="isPublic" type="checkbox" name="is_public" value="false" checked="true">
+                              <span class="lever"></span>
+                              private
+                            </label>
+                            {{/if}}
+                          </div>
+                        </div>
+                      </div>
+                      <button class="waves-effect waves-light btn-large login-module-btn">Save</button>
+                    </form>
                   </div>
                 </div>
-                <button class="waves-effect waves-light btn-large login-module-btn">Save</button>
-              </form>
+              </div>
+              <div class="modal-footer">
+                <a href="#modal3" class="modal-close waves-effect waves-green btn-flat">close</a>
+              </div>
             </div>
+            {{!-- end of edit modal --}}
           </div>
-        </div>
-        <div class="modal-footer">
-          <a href="#modal3" class="modal-close waves-effect waves-green btn-flat">close</a>
+      </div>
+      <div class="card-action">
+        <div class="edit-delete-buttons">
+          <a href="#/folder/{{this._id}}" class="modal-trigger">
+            <button class="btn-floating btn-small waves-effect waves-light teal lighten">
+              <i class="material-icons delete">edit</i>
+            </button>
+          </a>
+          <form action="/folder/{{this._id}}/delete" method="POST">
+            <button class="btn-floating btn-small waves-effect waves-light red darken-1">
+              <i class="material-icons delete">close</i>
+            </button>
+          </form>
         </div>
       </div>
-      {{!-- end of edit modal --}}
     </div>
   </div>
 </div>
